--- a/resources/assets/sass/timeline.scss
+++ b/resources/assets/sass/timeline.scss
@@ -7,11 +7,23 @@
             padding-top: 72px;
 
             .section__heading{
-                font-size: 85px;
+
+                font-size: 46px;
                 font-weight: bold;
-                letter-spacing: -3.8px;
-                line-height: 0.94;
-                margin-bottom: 90px;
+                letter-spacing: -1.3px;
+                line-height: 0.96;
+
+                @include whenLargerThan('medium-screen') {
+                    font-size: 68px;
+                    letter-spacing: -3px;
+                    line-height: 0.94;
+                }
+
+                @include whenLargerThan('medium-screen') {
+                    font-size: 85px;
+                    letter-spacing: -3.8px;
+                }
+
             }
 
         }
